--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
+    "react-scroll-motion": "^0.2.1",
     "use-sound": "^4.0.1",
     "web-vitals": "^1.1.2"
   },
